force-app/main/default/objects/DocumentChecklistItem/DocumentChecklistItem.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>