force-app/main/default/objects/DocumentChecklistItem/fields/Agency_Name_Helper__c.field-meta.xml
<CustomField>
    <fullName>Agency_Name_Helper__c</fullName>
    <formula>Contract__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency Name Helper</label>
    <type>Text</type>
</CustomField>