force-app/main/default/objects/DocumentChecklistItem/fields/App_Asgn_Total_Count__c.field-meta.xml
<CustomField>
    <fullName>App_Asgn_Total_Count__c</fullName>
    <description>populated via DLRS</description>
    <label>App Asgn Total Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>