force-app/main/default/objects/DocumentChecklistItem/fields/Budget_Table_Helper__c.field-meta.xml
<CustomField>
    <fullName>Budget_Table_Helper__c</fullName>
    <formula>IF(
  ISBLANK(TEXT(Contract__r.Contract_Budget_Table__c)),
  &quot;BLANK&quot;,
  TEXT(Contract__r.Contract_Budget_Table__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Table Helper</label>
    <type>Text</type>
</CustomField>