force-app/main/default/objects/DocumentChecklistItem/fields/Client_Status_as_a__c.field-meta.xml
<CustomField>
    <fullName>Client_Status_as_a__c</fullName>
    <formula>TEXT( Contract__r.Client_Status_as_a__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Status as a</label>
    <type>Text</type>
</CustomField>