force-app/main/default/objects/DocumentChecklistItem/fields/Contract_Budget_Table_Helper__c.field-meta.xml
<CustomField>
    <fullName>Contract_Budget_Table_Helper__c</fullName>
    <formula>TEXT( Contract__r.Contract_Budget_Table__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Budget Table Helper</label>
    <type>Text</type>
</CustomField>