force-app/main/default/objects/DocumentChecklistItem/fields/Contract_External__c.field-meta.xml
<CustomField>
    <fullName>Contract_External__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Contract object for files that SHOULD be shared with external portal users</description>
    <label>Contract External</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Document Checklist Items (Contract External)</relationshipLabel>
    <relationshipName>Document_Checklist_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>