force-app/main/default/objects/DocumentChecklistItem/fields/Contract_Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>Contract_Funding_Source__c</fullName>
    <formula>Contract__r.Program__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funding Source</label>
    <type>Text</type>
</CustomField>