force-app/main/default/objects/DocumentChecklistItem/fields/ContractIDhelper__c.field-meta.xml
<CustomField>
    <fullName>ContractIDhelper__c</fullName>
    <formula>CASESAFEID( Contract__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContractIDhelper</label>
    <type>Text</type>
</CustomField>