force-app/main/default/objects/DocumentChecklistItem/fields/Created_Externally__c.field-meta.xml
<CustomField>
    <fullName>Created_Externally__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created Externally</label>
    <type>Checkbox</type>
</CustomField>