force-app/main/default/objects/DocumentChecklistItem/fields/Date_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved__c</fullName>
    <description>populated via flow &quot;[Record-Triggered] Doc Checklist Item Approved Updates&quot;</description>
    <label>Date Approved</label>
    <type>Date</type>
</CustomField>