force-app/main/default/objects/DocumentChecklistItem/fields/Document_Type_Form_Type_frm__c.field-meta.xml
<CustomField>
    <fullName>Document_Type_Form_Type_frm__c</fullName>
    <formula>TEXT( DocumentType.FormType )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Type Form Type</label>
    <type>Text</type>
</CustomField>