force-app/main/default/objects/DocumentChecklistItem/fields/Document_Type_frm__c.field-meta.xml
<CustomField>
    <fullName>Document_Type_frm__c</fullName>
    <formula>DocumentType.MasterLabel</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Type</label>
    <type>Text</type>
</CustomField>