force-app/main/default/objects/DocumentChecklistItem/fields/ERR_Status__c.field-meta.xml
<CustomField>
    <fullName>ERR_Status__c</fullName>
    <formula>TEXT(Contract__r.ERR_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERR Status</label>
    <type>Text</type>
</CustomField>