force-app/main/default/objects/DocumentChecklistItem/fields/Helper_AccountId__c.field-meta.xml
<CustomField>
    <fullName>Helper_AccountId__c</fullName>
    <formula>Account.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Helper AccountId</label>
    <type>Text</type>
</CustomField>