force-app/main/default/objects/DocumentChecklistItem/fields/National_Objective_Helper__c.field-meta.xml
<CustomField>
    <fullName>National_Objective_Helper__c</fullName>
    <formula>TEXT ( Contract__r.National_Objective_Contract__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>National Objective HELPER</label>
    <type>Text</type>
</CustomField>