force-app/main/default/objects/DocumentChecklistItem/fields/of_Residents_are_LMI_HELPER__c.field-meta.xml
<CustomField>
    <fullName>of_Residents_are_LMI_HELPER__c</fullName>
    <formula>Contract__r.of_Residents_are_LMI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% of Residents are LMI (HELPER)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>