force-app/main/default/objects/DocumentChecklistItem/fields/Program_Eligibility_Helper__c.field-meta.xml
<CustomField>
    <fullName>Program_Eligibility_Helper__c</fullName>
    <formula>Contract__r.Activity_Category__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Eligibility Helper</label>
    <type>Text</type>
</CustomField>