force-app/main/default/objects/DocumentChecklistItem/fields/Residantial_Helper__c.field-meta.xml
<CustomField>
    <fullName>Residantial_Helper__c</fullName>
    <formula>Contract__r.Residential__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Residantial % (Helper)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>