force-app/main/default/objects/DocumentChecklistItem/fields/Status_frm__c.field-meta.xml
<CustomField>
    <fullName>Status_frm__c</fullName>
    <formula>IF( App_Asgn_Total_Count__c = 0, &quot;New&quot;,
			IF( App_Asgn_New_Count__c = App_Asgn_Total_Count__c, &quot;New&quot;,
    IF(  App_Asgn_Pending_Count__c =  App_Asgn_Total_Count__c , &quot;Pending&quot;,
			    IF(  App_Asgn_Approve_with_Changes_Count__c =  App_Asgn_Total_Count__c ,&quot;Pending&quot;,
							    IF(  App_Asgn_Approved_Count__c =  App_Asgn_Total_Count__c, &quot;Ready for Signature&quot;,
											    IF( App_Asgn_Rejected_Count__c = App_Asgn_Total_Count__c, &quot;Rejected&quot;, &quot;Draft&quot;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Approval Status</label>
    <type>Text</type>
</CustomField>