force-app/main/default/objects/DocumentChecklistItem/listViews/ARPA_Grants_Manager_Queue_DocumentChecklistItem.listView-meta.xml
<ListView>
    <fullName>ARPA_Grants_Manager_Queue_DocumentChecklistItem</fullName>
    <filterScope>Queue</filterScope>
    <label>CDA ARPA Grants Manager Queue</label>
    <queue>ARPA_Grants_Manager_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>