force-app/main/default/objects/DocumentChecklistItem/listViews/Coastal_Queue_DocumentChecklistItem.listView-meta.xml
<ListView>
    <fullName>Coastal_Queue_DocumentChecklistItem</fullName>
    <filterScope>Queue</filterScope>
    <label>Coastal Queue</label>
    <queue>Coastal_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>