force-app/main/default/objects/DocumentChecklistItem/listViews/Director_of_Compliance_Queue_DocumentChecklistItem.listView-meta.xml
<ListView>
    <fullName>Director_of_Compliance_Queue_DocumentChecklistItem</fullName>
    <filterScope>Queue</filterScope>
    <label>CDA Director of Compliance Queue</label>
    <queue>Director_of_Compliance_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>