force-app/main/default/objects/DocumentChecklistItem/listViews/Executive_Director_DocumentChecklistItem.listView-meta.xml
<ListView>
    <fullName>Executive_Director_DocumentChecklistItem</fullName>
    <filterScope>Queue</filterScope>
    <label>CDA Executive Director</label>
    <queue>Executive_Director</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>