force-app/main/default/objects/DocumentChecklistItem/listViews/Fiscal_Manager_or_Accountant_Manager_DocumentChecklistItem.listView-meta.xml
<ListView>
    <fullName>Fiscal_Manager_or_Accountant_Manager_DocumentChecklistItem</fullName>
    <filterScope>Queue</filterScope>
    <label>CDA Fiscal Manager or Accountant Manager</label>
    <queue>Fiscal_Manager_or_Accountant_Manager</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>